<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintTask"
        android:inputType="textAutoCorrect" />

    <EditText
        android:id="@+id/editTextWho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintWho"
        android:inputType="textAutoCorrect" />

    <EditText
        android:id="@+id/editTextDueDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintDueDate"
        android:inputType="textAutoCorrect" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/radio_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completed"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_incomplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incompleted"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnUpdate" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDelete" />


</LinearLayout>
